# StockMarketAgent

./: crew.yaml  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
src/: agent.py  main.py
src/stock_market_agent/: crew.py
src/stock_market_agent/config/: agents.yaml  tasks.yaml
src/stock_market_agent/tools/: utils.py
